--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "express-session": "^1.17.0",
     "http-errors": "~1.6.3",
     "jade": "~1.11.0",
+    "jshint": "^2.10.3",
     "mocha": "^6.2.2",
     "morgan": "~1.9.1",
     "pg": "^7.12.1"
